# BlackHoleRaytracer

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  TODO.md
BlackHoleTracer/Assets/: README.md
BlackHoleTracer/Headers/: blackhole.h  boiler.hpp  camera.h  display.h  framebuffer.h  ray.h  shader.h
BlackHoleTracer/Shaders/: blackhole.frag  blackhole.vert
BlackHoleTracer/Sources/: camera.cpp  display.cpp  framebuffer.cpp  main.cpp
